# langchain-solutions

./: .gitignore  BasicLangChain.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: BasicLangChain-checkpoint.ipynb  README-checkpoint.md
RestaurantGenerator/: langchain_helper.py  main.py  secret_key.py
