[tool.poetry]
name = "langchain-solutions"
version = "0.1.0"
description = ""
authors = ["Tibor Kiss <support@cloudsteak.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.37.0"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
google-search-results = "^2.4.2"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
